--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,11 +1,27 @@
-{"rewrites" : [
+{
+  "rewrites": [
     {
-        "source": "/(.*)",
-        "destination": "/"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-    
-],
-    "redirects":[],
-    "headers":[],
-    "cleanUrls":true
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
+    }
+  ]
 }
